[BED-169] Fix non translated argument
Took 3 minutes