@@ -26,7 +26,7 @@ import org.bukkit.event.player.PlayerJoinEvent;
 import org.bukkit.event.player.PlayerQuitEvent;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Locale;
 
 public class LobbyState extends AbstractGameState implements Listener {
@@ -146,10 +146,11 @@ public class LobbyState extends AbstractGameState implements Listener {
         Scoreboard scoreboard = Scoreboard.builder(DisplayType.SIDEBAR)
                 .player(player)
                 .title(Component.translatable("state.lobby.scoreboard.title"))
-                .appendLines(Arrays.asList(
+                .appendLines(List.of(
                         Component.empty(),
                         GlobalTranslator.render(Component.translatable("state.lobby.scoreboard.map"), locale),
-                        GlobalTranslator.render(Component.translatable("state.lobby.scoreboard.map.current"), locale),
+                        GlobalTranslator.render(Component.translatable("state.lobby.scoreboard.map.current",
+                                NamedTranslationArgument.component("name", Component.text(this.gameMap.name()))), locale),
                         Component.empty()
                 ))
                 .build();
